# 07_DEVICE_LAUNCHER

./: .gitignore  BUILDING_APPS.md  CMakeLists.txt  README.md  build-flash.ps1  clean-build-flash.ps1  flash-only.ps1  flash_manual.bat  monitor.ps1  partitions.csv  pull_bin_from_server.sh  sdkconfig  sdkconfig.defaults  sync_all_projects.sh  sync_and_ssh_setup.sh  sync_project.sh
main/: CMakeLists.txt  display_lvgl.cpp  i2c_bus.cpp  idf_component.yml  lvgl_fs_sdcard.cpp  main.cpp  radio_player.cpp  radio_player.h  ui_app_carousel.cpp  ui_fileserver.cpp  ui_launcher.cpp  ui_media.cpp  ui_mp3.cpp  ui_radio.cpp  ui_radio.h  ui_terminal.cpp  wifi_manager.cpp  wifi_manager.h
main/include/: app_pins.h  display_lvgl.h  i2c_bus.h  lvgl_fs_sdcard.h  ui_app_carousel.h  ui_fileserver.h  ui_launcher.h  ui_media.h  ui_mp3.h  ui_terminal.h
main/include/services/: app_manager.h  audio_es8311.h  ble_service.h  ble_uart_service.h  boot_service.h  fileserver_service.h  imu_qmi8658.h  ota_service.h  pc_connect_service.h  power_axp2101.h  power_manager.h  sdcard_service.h  storage_service.h  time_service.h  wifi_service.h
main/services/: app_manager.cpp  audio_es8311.cpp  ble_service.cpp  ble_uart_service.cpp  boot_service.cpp  fileserver_service.cpp  imu_qmi8658.cpp  ota_service.cpp  pc_connect_service.cpp  power_axp2101.cpp  power_manager.cpp  sdcard_service.cpp  storage_service.cpp  time_service.cpp  wifi_service.cpp
tools/: Clock.app  README.md  Settings.app  Snake.app  app_builder.py
