idf_component_register(
    SRCS
        "main.cpp"
        "display_lvgl.cpp"
        "i2c_bus.cpp"
        "wifi_manager.cpp"
        "radio_player.cpp"
        "ui_launcher.cpp"
        "ui_app_carousel.cpp"
        "ui_terminal.cpp"
        "ui_media.cpp"
        "ui_mp3.cpp"
        "ui_radio.cpp"
        "ui_fileserver.cpp"
        "lvgl_fs_sdcard.cpp"
        "services/power_axp2101.cpp"
        "services/power_manager.cpp"
        "services/boot_service.cpp"
        "services/time_service.cpp"
        "services/wifi_service.cpp"
        "services/ble_service.cpp"
        "services/ble_uart_service.cpp"
        "services/imu_qmi8658.cpp"
        "services/audio_es8311.cpp"
        "services/sdcard_service.cpp"
        "services/storage_service.cpp"
        "services/ota_service.cpp"
        "services/app_manager.cpp"
        "services/pc_connect_service.cpp"
        "services/fileserver_service.cpp"
    REQUIRES
        esp_wifi
        esp_netif
        esp_event
        nvs_flash
        bt
        esp_app_format
        esp_https_ota
        XPowersLib
        SensorLib
        esp_driver_i2c
        esp_ringbuf
        esp_driver_i2s
    INCLUDE_DIRS
        "."
        "include"
    PRIV_REQUIRES
        esp_http_server
        fatfs
        wear_levelling
        bootloader_support
    EMBED_FILES
        "../logo.png"
)
